--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,45 @@
-/* You can add global styles to this file, and also import other style files */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+body {
+    /* background-color: #F9F9FB; */
+}
+body, body * {
+    margin: 0;
+    padding: 0;
+    font-family: "Poppins";
+    color: #1C1C1C;
+}
+.container{
+    margin: 0 auto;
+    width: 80%;
+}
+@media screen and (max-width: 480px) {
+    .container{
+        width: 95%;
+    }
+}
+@media screen and (min-width: 480px) {
+    .container{
+        width: 90%;
+    }
+}
+@media screen and (min-width: 700px) {
+    .container {
+        width: 80%;
+    }
+}
+@media screen and (min-width: 1100px) {
+    .container{
+        width: 85%;
+    }
+}
+@media screen and (min-width: 1440px) {
+    .container{
+          width: 1200px;
+    }
+}
+.single__italic {
+    font-family: "Open Sans";
+    font-style: italic;
+}
