--- a/src/app/pages/new/new.component.html
+++ b/src/app/pages/new/new.component.html
@@ -6,7 +6,7 @@
 </div>
 <div class="bg-bogyBg pt-14">
     <div class="container">
-        <div class="grid grid-cols-3 gap-10">
+        <div class="grid grid-cols-3 gap-10 md:grid-cols-1">
             <app-item *ngFor="let item of data" [item]="item" height="280"></app-item>
         </div>
     </div>
