--- a/src/app/pages/new/new.component.html
+++ b/src/app/pages/new/new.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="mb-14 mt-4">
         <h4 class="font-bold text-3xl">{{pageTitle}}</h4>
-        <p class="text-sm w-[470px] mt-8 leading-6 tracking-wider">{{pageDescription}}</p>
+        <p class="text-sm w-[470px] sm:w-full mt-8 leading-6 tracking-wider">{{pageDescription}}</p>
     </div>
 </div>
 <div class="bg-bogyBg pt-14">
